--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,24 @@
---- #YAML:1.0
-name:               Spreadsheet-PrintExcelSheet
-version:            0.01
-abstract:           ~
+---
+abstract: 'a module for print Excelsheets'
 author:
-    - Gernot Havranek <havi@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Gernot Havranek <havi@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:  {}
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  Test::More: 0
+  Win32::OLE: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Spreadsheet-PrintExcelSheet
+provides:
+  Spreadsheet::PrintExcelSheet:
+    file: lib/Spreadsheet/PrintExcelSheet.pm
+    version: 0.02
+requires:
+  perl: v5.10.0
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.02
